Update and rename navbar.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang=pt-BR">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developed</title>
-                                                                         
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <header>
         <nav class="nav-bar">
-
-            <div class="logo"><h1>Web Developed</h1></div>
+            <div class="logo">
+                <h1>Web Developed</h1>
+            </div>
 
             <div class="search-box">
-                <input type="text" name="search" placeholder="Pequisar...">
+                <input type="text" name="search" placeholder="Pesquisar...">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
 
@@ -39,7 +41,24 @@
                 </ul>
             </div>
 
+            <div class="menu-toggle">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </nav>
-</body>
 
+        <div class="nav-menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <script src="script.js"></script>
+    
+</body>
 </html>
